# internal/api/server.go
@@ -10,14 +10,17 @@ var _ StrictServerInterface = (*server)(nil)
 type server struct {
 	streamUseCase usecase.StreamUseCase
 	epgUseCase    *usecase.EPGUseCase
+	acestreamURL  string
 }
 
 func NewServer(
 	streamUseCase usecase.StreamUseCase,
 	epgUseCase *usecase.EPGUseCase,
+	acestreamURL string,
 ) server {
 	return server{
 		streamUseCase: streamUseCase,
 		epgUseCase:    epgUseCase,
+		acestreamURL:  acestreamURL,
 	}
 }
